[tool.black]
line_length = 79
target_version = ["py37"]

[tool.coverage.run]
branch = true
source = ["badabump"]

[tool.coverage.paths]
source = ["./src/"]

[tool.coverage.report]
fail_under = 95
omit = ["./src/badabump/__main__.py", "./src/badabump/ci/__main__.py"]
skip_covered = true
show_missing = true

[tool.isort]
profile = "attrs"
combine_as_imports = true
force_alphabetical_sort_within_sections = true
lines_between_types = 0
src_paths = ["./", "./src/"]
virtual_env = "./.venv/"

[tool.mypy]
allow_untyped_globals = true
check_untyped_defs = true
disallow_any_decorated = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
follow_imports = "normal"
follow_imports_for_stubs = true
ignore_missing_imports = false
mypy_path = "./src/"
namespace_packages = true
python_executable = "./.venv/bin/python3"
show_column_numbers = true
show_error_codes = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
  "conftest",
  "migrations.*",
  "tests.*",
  "*.tests"
]
ignore_errors = true

[tool.poetry]
name = "badabump"
version = "21.3.3"
description = "Manage changelog and bump project version number using conventional commits from latest git tag. Support Python & JavaScript projects and CalVer & SemVer schemas. Designed to run at GitHub Actions."
authors = ["Igor Davydenko <iam@igordavydenko.com>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://igordavydenko.com/projects/#badabump"
repository = "https://github.com/playpauseandstop/badabump"
packages = [
  {include = "badabump", from = "src"},
]
keywords = ["changelog", "conventional commit", "bump", "version", "calver", "semver", "pre release"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Environment :: Console",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development",
  "Topic :: Utilities",
  "Typing :: Typed"
]

[tool.poetry.dependencies]
python = "^3.7"
attrs = "^22.1.0"
tomli = {python = "<=3.11.0a6", version = ">=1.2.0,<3"}

[tool.poetry.dev-dependencies]
coverage = {extras = ["toml"], version = "^6.4.3"}
coveralls = "^3.3.1"
mypy = "^0.971"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
time-machine = "^2.8.2"
tomli-w = "^1.0.0"

[tool.poetry.scripts]
badabump = "badabump.cli.app:main"
badabump-ci = "badabump.cli.ci_app:main"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/playpauseandstop/badabump/issues"

[tool.pytest.ini_options]
minversion = "7.1.2"
testpaths = ["./tests/"]
addopts = "--cov --no-cov-on-fail"
log_level = "info"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py37,py38,py39,py310,py310-minimum-requirements,py311
skipsdist = True

[gh-actions]
python =
  3.7: py37
  3.8: py38
  3.9: py39
  3.10: py310
  3.11: py311

[testenv]
passenv =
  PYTHONPATH
  PYTEST_ADDOPTS
setenv =
  PYTHONPATH=.
skip_install = True
whitelist_externals = poetry
commands_pre =
  poetry install
commands =
  poetry run python3 -m pytest

[testenv:py310-minimum-requirements]
commands_pre =
  poetry install
  poetry run python3 -m pip install attrs==20.2.0 tomli==1.2.0
"""

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
