[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 79
target_version = ["py310"]

[tool.coverage.run]
branch = true
source = ["badabump"]

[tool.coverage.paths]
source = ["src/"]

[tool.coverage.report]
exclude_lines = [
  "if TYPE_CHECKING:",
  "@overload",
]
omit = [
  "src/*/__main__.py",
  "src/*/annotations.py",
]
fail_under = 95
skip_covered = true
show_missing = true

[tool.isort]
profile = "black"
combine_as_imports = true
force_alphabetical_sort_within_sections = true
lines_between_types = 0
src_paths = ["src/"]
virtual_env = ".venv/"

[tool.mypy]
allow_untyped_globals = true
check_untyped_defs = true
disallow_any_decorated = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
exclude = ["docs/", "migrations/", "tests/"]
follow_imports = "normal"
follow_imports_for_stubs = true
ignore_missing_imports = false
mypy_path = "src/"
namespace_packages = true
no_implicit_optional = true
python_version = "3.10"
show_column_numbers = true
show_error_codes = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true

[tool.poetry]
name = "badabump"
version = "22.1.0"
description = "Manage changelog and bump project version number using conventional commits from latest git tag. Support Python & JavaScript projects and CalVer & SemVer schemas. Designed to run at GitHub Actions."
authors = ["Igor Davydenko <iam@igordavydenko.com>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://igordavydenko.com/projects/#badabump"
repository = "https://github.com/playpauseandstop/badabump"
packages = [
  {include = "badabump", from = "src/"},
]
keywords = ["changelog", "conventional commit", "bump", "version", "calver", "semver", "pre release"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Environment :: Console",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development",
  "Topic :: Utilities",
  "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.10"
attrs = "^22.1.0"
tomli = {python = "<=3.11.0a6", version = ">=1.2.0,<3"}

[tool.poetry.group.dev.dependencies]
mypy = "^2.1.0"

[tool.poetry.group.test.dependencies]
coverage = "^7.14.1"
coveralls = "^4.1.0"
pytest = "^9.0.3"
pytest-cov = "^7.1.0"
time-machine = "^3.2.0"
tomli-w = "^1.2.0"

[tool.poetry.scripts]
badabump = "badabump.cli.app:main"
badabump-ci = "badabump.cli.ci_app:main"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/playpauseandstop/badabump/issues"

[tool.pytest.ini_options]
minversion = "9.0.3"
testpaths = ["tests/"]
addopts = "--cov --no-cov-on-fail"
log_level = "info"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py310,py310-minimum-requirements,py311,py312,py313,py314
skipsdist = True

[gh-actions]
python =
  3.10: py310
  3.11: py311
  3.12: py312
  3.13: py313
  3.14: py314

[testenv]
passenv =
  HOME
  PYTEST_ADDOPTS
  PYTHONUNBUFFERED
skip_install = True
allowlist_externals =
  git
  poetry
commands_pre =
  poetry install --only main,test
commands =
  git config init.defaultBranch
  git config user.name
  git config user.email
  python3 -m pytest

[testenv:py310-minimum-requirements]
commands_pre =
  poetry install --only main,test
  python3 -m pip install attrs==22.1.0 tomli==1.2.0
"""
