# Build system
# https://packaging.python.org/en/latest/specifications/pyproject-toml/#declaring-build-system-dependencies-the-build-system-table
[build-system]
build-backend = "poetry.core.masonry.api"
requires = [ "poetry-core>=1.0.0" ]

# Project metadata
# https://packaging.python.org/en/latest/specifications/pyproject-toml/#declaring-project-metadata-the-project-table
[project]
name = "badabump"
version = "22.1.0"
description = """\
  Manage changelog and bump project version number using conventional commits from latest git tag. Support Python & \
  JavaScript projects and CalVer & SemVer schemas. Designed to run at GitHub Actions.\
  """
readme = "README.md"
keywords = [ "bump", "calver", "changelog", "conventional commit", "pre release", "semver", "version" ]
license = "BSD-3-Clause"
license-files = [ "LICENSE" ]
authors = [ { name = "Igor Davydenko", email = "iam@igordavydenko.com" } ]
requires-python = ">=3.10,<4.0"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development",
  "Topic :: Utilities",
  "Typing :: Typed",
]
dependencies = [
  "attrs>=22.1.0,<23.0.0",
  "tomli>=1.2.0,<3.0.0; python_version<='3.11.0a6'",
]
[project.scripts]
badabump = "badabump.cli.app:main"
badabump-ci = "badabump.cli.ci_app:main"
[project.urls]
"Bug Tracker" = "https://github.com/playpauseandstop/badabump/issues"
homepage = "https://igordavydenko.com/projects/#badabump"
repository = "https://github.com/playpauseandstop/badabump"

[dependency-groups]
dev = [
  "mypy>=2.1.0,<3.0.0",
  "typing-extensions>=4.15.0,<5.0.0",
]
test = [
  "coverage>=7.14.1,<8.0.0",
  "pytest>=9.0.3,<10.0.0",
  "pytest-cov>=7.1.0,<8.0.0",
  "time-machine>=3.2.0,<4.0.0",
  "tomli-w>=1.2.0,<2.0.0",
]

# black configuration
# https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-via-a-file
[tool.black]
line_length = 79
target_version = [ "py310" ]

# isort configuration
# https://pycqa.github.io/isort/docs/configuration/config_files.html#pyprojecttoml-preferred-format
[tool.isort]
profile = "black"
force_alphabetical_sort_within_sections = true
lines_between_types = 0
combine_as_imports = true
src_paths = [ "src/" ]
virtual_env = ".venv/"

# pyproject-fmt configuration
# https://pyproject-fmt.readthedocs.io/en/latest/configuration.html
[tool.pyproject-fmt]
keep_full_version = true
generate_python_version_classifiers = false
table_format = "long"
collapse_tables = [ "project.authors" ]

# mypy configuration
# https://mypy.readthedocs.io/en/stable/config_file.html
[tool.mypy]
mypy_path = "src/"
exclude = [ "docs/", "migrations/", "tests/" ]
python_version = "3.14"
disallow_any_decorated = true
strict = true
show_column_numbers = true
show_error_codes = true

# pytest configuration
# https://docs.pytest.org/en/stable/reference/customize.html#pyproject-toml
[tool.pytest.ini_options]
minversion = "9.0.3"
testpaths = [ "tests/" ]
addopts = "--cov --no-cov-on-fail"
log_level = "info"

# coverage configuration
# https://coverage.readthedocs.io/en/latest/config.html#toml-syntax
[tool.coverage.paths]
source = [ "src/" ]
[tool.coverage.report]
exclude_also = [
  "if TYPE_CHECKING:",
  "@overload",
]
omit = [
  "src/*/__main__.py",
  "src/*/annotations.py",
]
fail_under = 95
skip_covered = true
show_missing = true
[tool.coverage.run]
branch = true
source = [ "badabump" ]

# tox configuration
# https://tox.wiki/en/stable/reference/config.html#pyproject-toml-ini
[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py310,py310-minimum-requirements,py311,py312,py313,py314
skipsdist = True

[gh-actions]
python =
  3.10: py310
  3.11: py311
  3.12: py312
  3.13: py313
  3.14: py314

[testenv]
passenv =
  HOME
  PYTEST_ADDOPTS
  PYTHONUNBUFFERED
skip_install = True
allowlist_externals =
  git
  poetry
commands_pre =
  poetry install --only main,test
commands =
  git config init.defaultBranch
  git config user.name
  git config user.email
  python3 -m pytest

[testenv:py310-minimum-requirements]
commands_pre =
  poetry install --only main,test
  python3 -m pip install attrs==22.1.0 tomli==1.2.0
"""
